--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-calendar": "^4.8.0",
+    "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-jwt": "^1.2.0",
