--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
